completed code for training VAE

--- a/VAE_IR_MNIST.ipynb
+++ b/VAE_IR_MNIST.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
       "    amsgrad: False\n",
       "    betas: (0.9, 0.999)\n",
       "    eps: 1e-08\n",
-      "    lr: 0.001\n",
+      "    lr: 0.0005\n",
       "    weight_decay: 0.001\n",
       ")\n"
      ]
@@ -392,11 +392,11 @@
     "net = VAE(n_z)\n",
     "net = net.to(device)\n",
     "\n",
-    "optimizer = optim.Adam(net.parameters(), lr = 0.001, weight_decay = 0.001)\n",
+    "optimizer = optim.Adam(net.parameters(), lr = 0.0005, weight_decay = 0.001)\n",
     "                       \n",
     "# counting trainable parameters in model\n",
     "num_trainable_params = sum(p.numel() for p in net.parameters() if p.requires_grad)\n",
-    "                       \n",
+    "\n",
     "# モデルの構造、オプティマイザの表示\n",
     "print('The number of trainable parameters:', num_trainable_params)\n",
     "print('\\nModel:\\n', net)\n",
@@ -405,9 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kaito/.local/lib/python3.5/site-packages/torchvision/models/densenet.py:212: UserWarning: nn.init.kaiming_normal is now deprecated in favor of nn.init.kaiming_normal_.\n",
+      "  nn.init.kaiming_normal(m.weight.data)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -479,14 +487,6 @@
       "  )\n",
       ")\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kaito/.local/lib/python3.5/site-packages/torchvision/models/densenet.py:212: UserWarning: nn.init.kaiming_normal is now deprecated in favor of nn.init.kaiming_normal_.\n",
-      "  nn.init.kaiming_normal(m.weight.data)\n"
-     ]
     }
    ],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,36 +597,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch[1/150] train_loss:-96094.0314 validation_loss:-224355.1137\n",
-      "epoch[2/150] train_loss:-239232.6494 validation_loss:-246228.6528\n",
-      "epoch[3/150] train_loss:-250525.8412 validation_loss:-253729.0999\n",
-      "epoch[4/150] train_loss:-255484.9144 validation_loss:-256397.1387\n",
-      "epoch[5/150] train_loss:-257189.5308 validation_loss:-257240.9334\n",
-      "epoch[6/150] train_loss:-257995.1996 validation_loss:-257873.9477\n",
-      "epoch[7/150] train_loss:-258530.6298 validation_loss:-258548.0532\n",
-      "epoch[8/150] train_loss:-259181.6636 validation_loss:-258549.6488\n",
-      "epoch[9/150] train_loss:-259873.6092 validation_loss:-260396.8011\n",
-      "epoch[10/150] train_loss:-260267.2212 validation_loss:-255437.3659\n",
-      "epoch[11/150] train_loss:-263268.3212 validation_loss:-263758.5597\n",
-      "epoch[12/150] train_loss:-259333.4768 validation_loss:-252076.9346\n",
-      "epoch[13/150] train_loss:-263341.9174 validation_loss:-266861.8167\n",
-      "epoch[14/150] train_loss:-269232.3686 validation_loss:-270242.3193\n",
-      "epoch[15/150] train_loss:-275296.1296 validation_loss:-277735.6024\n",
-      "epoch[16/150] train_loss:-281018.2932 validation_loss:-284098.1178\n"
+      "epoch[1/50] train_loss:-57686.9657 validation_loss:-221157.1332\n",
+      "epoch[2/50] train_loss:-238776.9083 validation_loss:-242145.6517\n",
+      "epoch[3/50] train_loss:-250341.1410 validation_loss:-248034.6482\n",
+      "epoch[4/50] train_loss:-255156.5285 validation_loss:-255341.1491\n",
+      "epoch[5/50] train_loss:-257602.8609 validation_loss:-257584.7243\n",
+      "epoch[6/50] train_loss:-260230.1021 validation_loss:-261183.0736\n",
+      "epoch[7/50] train_loss:-265574.0459 validation_loss:-267319.8513\n",
+      "epoch[8/50] train_loss:-273114.1786 validation_loss:-277917.5421\n",
+      "epoch[9/50] train_loss:-282979.6877 validation_loss:-285736.3572\n",
+      "epoch[10/50] train_loss:-291162.7917 validation_loss:-291832.0883\n",
+      "epoch[11/50] train_loss:-295669.9748 validation_loss:-295791.6299\n",
+      "epoch[12/50] train_loss:-299560.3373 validation_loss:-298499.3811\n",
+      "epoch[13/50] train_loss:-303402.1796 validation_loss:-301611.6942\n",
+      "epoch[14/50] train_loss:-306818.6436 validation_loss:-304390.9216\n",
+      "epoch[15/50] train_loss:-311801.4392 validation_loss:-309496.5074\n",
+      "epoch[16/50] train_loss:-316989.5919 validation_loss:-313673.8742\n",
+      "epoch[17/50] train_loss:-323252.4447 validation_loss:-318954.1550\n",
+      "epoch[18/50] train_loss:-329846.3429 validation_loss:-323916.9531\n",
+      "epoch[19/50] train_loss:-336915.2630 validation_loss:-330540.4301\n",
+      "epoch[20/50] train_loss:-343965.9026 validation_loss:-336573.1853\n",
+      "epoch[21/50] train_loss:-349912.8246 validation_loss:-339410.3283\n",
+      "epoch[22/50] train_loss:-355196.3208 validation_loss:-343509.9811\n",
+      "epoch[23/50] train_loss:-360546.2034 validation_loss:-346510.9184\n",
+      "epoch[24/50] train_loss:-364576.6389 validation_loss:-349343.4933\n",
+      "epoch[25/50] train_loss:-368854.3288 validation_loss:-351631.6429\n",
+      "epoch[26/50] train_loss:-372266.1287 validation_loss:-352920.0389\n",
+      "epoch[27/50] train_loss:-375396.2702 validation_loss:-352973.5596\n",
+      "epoch[28/50] train_loss:-378372.4684 validation_loss:-353473.8722\n",
+      "epoch[29/50] train_loss:-380906.3339 validation_loss:-353238.9372\n",
+      "epoch[30/50] train_loss:-383699.3586 validation_loss:-353286.1054\n",
+      "epoch[31/50] train_loss:-386604.0351 validation_loss:-352928.6892\n",
+      "epoch[32/50] train_loss:-389026.7843 validation_loss:-351029.5819\n",
+      "early stopping\n"
      ]
     }
    ],
    "source": [
-    "n_epochs = 150\n",
+    "n_epochs = 50\n",
     "train_loss_list = [[],[],[]]\n",
     "validation_loss_list = [[],[],[]]\n",
+    "overfit = False\n",
+    "former_validation_loss = 1e10\n",
+    "\n",
     "for epoch in range(n_epochs):\n",
     "    train_D_loss, train_A_loss, train_M_loss = train(train_loader)\n",
     "    validation_D_loss, validation_A_loss, validation_M_loss = validation(validation_loader)\n",
@@ -644,14 +666,30 @@
     "    \n",
     "    print('epoch[%d/%d] train_loss:%1.4f validation_loss:%1.4f' %(epoch+1, n_epochs, train_loss, validation_loss))\n",
     "    \n",
-    "    if epoch % 50 == 0 or epoch % 100 == 0:\n",
-    "         optimizer.param_groups[0]['lr'] = optimizer.param_groups[0]['lr'] / 2\n",
+    "    if former_validation_loss < validation_loss:\n",
+    "        if overfit:\n",
+    "            print('early stopping')\n",
+    "            break\n",
+    "        else:\n",
+    "            overfit = True\n",
+    "    else:\n",
+    "        overfit = False\n",
+    "    \n",
+    "    former_validation_loss = validation_loss\n",
+    "        \n",
     "    \n",
     "np.save(save_dir + 'train_loss_list_use_densenet121.npy', np.array(train_loss_list))\n",
     "np.save(save_dir + 'validation_loss_list_use_densenet121.npy', np.array(validation_loss_list))\n",
     "\n",
     "torch.save(net.state_dict(), save_dir + 'VAE_IR_MNIST_use_densenet121.pth')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
